--- a/Dia 3/untitled.ipynb
+++ b/Dia 3/untitled.ipynb
@@ -147,8 +147,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train_pca = pca_2.transform(X_train)\n",
-    "X_test_pca = pca_2.transform(X_test)\n",
+    "X_train_pca = pca_2.transform(X_train_sc)\n",
+    "X_test_pca = pca_2.transform(X_test_sc)\n",
     "X_train_pca.shape"
    ]
   },
@@ -174,8 +174,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lr = LogisticRegression(C=1, max_iter=1000)\n",
+    "lr = LogisticRegression(C=1, max_iter=100)\n",
     "lr.fit(X_train_pca, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import accuracy_score"
    ]
   },
   {
@@ -183,7 +192,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "y_pred = lr.predict(X_test_pca)\n",
+    "accuracy_score(y_pred, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for C in [0.1, 0.5, 1.0, 1.5]:\n",
+    "    lr = LogisticRegression(C=c, max_iter=100)\n",
+    "    lr.fit(X_train_pca, y_train)\n",
+    "    y_pred = lr.predict(X_test_pca)\n",
+    "    acc = accuracy_score(y_pred, y_test)\n",
+    "    print(f'C: {c} - Accuracy: {acc})"
+   ]
   }
  ]
 }
