--- a/Dia 3/untitled.ipynb
+++ b/Dia 3/untitled.ipynb
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -542,32 +542,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "{'mean_fit_time': array([14.63199051, 14.68379577, 14.48038387]),\n",
-       " 'std_fit_time': array([0.7512291 , 0.327839  , 0.83204079]),\n",
-       " 'mean_score_time': array([0.05336372, 0.05804594, 0.05518381]),\n",
-       " 'std_score_time': array([0.00960868, 0.00831295, 0.01264422]),\n",
+       "{'mean_fit_time': array([19.0362103 , 19.33921234, 18.69023705]),\n",
+       " 'std_fit_time': array([0.72428309, 0.74969078, 0.90072118]),\n",
+       " 'mean_score_time': array([0.06876699, 0.06361771, 0.07256683]),\n",
+       " 'std_score_time': array([0.01655402, 0.01788563, 0.01714796]),\n",
        " 'param_C': masked_array(data=[0.05, 0.1, 0.15],\n",
        "              mask=[False, False, False],\n",
        "        fill_value='?',\n",
        "             dtype=object),\n",
        " 'params': [{'C': 0.05}, {'C': 0.1}, {'C': 0.15}],\n",
-       " 'split0_test_score': array([0.90190476, 0.90228571, 0.90095238]),\n",
-       " 'split1_test_score': array([0.90961905, 0.90980952, 0.91028571]),\n",
-       " 'split2_test_score': array([0.90952381, 0.91028571, 0.91066667]),\n",
-       " 'mean_test_score': array([0.90701587, 0.90746032, 0.90730159]),\n",
-       " 'std_test_score': array([0.00361431, 0.00366416, 0.00449226]),\n",
-       " 'rank_test_score': array([3, 1, 2], dtype=int32)}"
+       " 'split0_test_score': array([0.91335714, 0.91285714, 0.91321429]),\n",
+       " 'split1_test_score': array([0.91321429, 0.9125    , 0.91164286]),\n",
+       " 'split2_test_score': array([0.91128571, 0.91128571, 0.9105    ]),\n",
+       " 'mean_test_score': array([0.91261905, 0.91221429, 0.91178571]),\n",
+       " 'std_test_score': array([0.00094461, 0.00067259, 0.0011127 ]),\n",
+       " 'rank_test_score': array([1, 2, 3], dtype=int32)}"
       ]
      },
      "metadata": {},
-     "execution_count": 41
+     "execution_count": 43
     }
    ],
    "source": [
