--- a/Dia 4/training.ipynb
+++ b/Dia 4/training.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,9 +79,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "WARNING:tensorflow:From /home/grogman/.local/lib/python3.6/site-packages/tensorflow/python/ops/init_ops.py:1251: calling VarianceScaling.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\nInstructions for updating:\nCall initializer instance with the dtype argument instead of passing it to the constructor\n"
+     ]
+    }
+   ],
    "source": [
     "model = tf.keras.models.Sequential([\n",
     "    tf.keras.layers.Flatten(),\n",
@@ -96,34 +104,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Epoch 1/5\n",
-      "60000/60000 [==============================] - 19s 309us/sample - loss: 0.1913 - acc: 0.9426\n",
-      "Epoch 2/5\n",
-      "60000/60000 [==============================] - 19s 310us/sample - loss: 0.0870 - acc: 0.9729\n",
-      "Epoch 3/5\n",
-      "60000/60000 [==============================] - 19s 312us/sample - loss: 0.0673 - acc: 0.9792\n",
-      "Epoch 4/5\n",
-      "60000/60000 [==============================] - 19s 313us/sample - loss: 0.0521 - acc: 0.9840\n",
-      "Epoch 5/5\n",
-      "60000/60000 [==============================] - 19s 310us/sample - loss: 0.0460 - acc: 0.9864\n"
+      "Epoch 1/20\n",
+      "60000/60000 [==============================] - 33s 554us/sample - loss: 0.1945 - acc: 0.9413\n",
+      "Epoch 2/20\n",
+      "60000/60000 [==============================] - 33s 551us/sample - loss: 0.0958 - acc: 0.9719\n",
+      "Epoch 3/20\n",
+      "60000/60000 [==============================] - 33s 551us/sample - loss: 0.0695 - acc: 0.9797\n",
+      "Epoch 4/20\n",
+      "60000/60000 [==============================] - 33s 552us/sample - loss: 0.0577 - acc: 0.9828\n",
+      "Epoch 5/20\n",
+      "60000/60000 [==============================] - 33s 555us/sample - loss: 0.0504 - acc: 0.9858\n",
+      "Epoch 6/20\n",
+      "60000/60000 [==============================] - 33s 554us/sample - loss: 0.0449 - acc: 0.9868\n",
+      "Epoch 7/20\n",
+      "60000/60000 [==============================] - 33s 554us/sample - loss: 0.0408 - acc: 0.9883\n",
+      "Epoch 8/20\n",
+      "60000/60000 [==============================] - 33s 554us/sample - loss: 0.0421 - acc: 0.9889\n",
+      "Epoch 9/20\n",
+      "60000/60000 [==============================] - 33s 557us/sample - loss: 0.0359 - acc: 0.9906\n",
+      "Epoch 10/20\n",
+      "60000/60000 [==============================] - 33s 557us/sample - loss: 0.0375 - acc: 0.9905\n",
+      "Epoch 11/20\n",
+      "60000/60000 [==============================] - 33s 558us/sample - loss: 0.0266 - acc: 0.9935\n",
+      "Epoch 12/20\n",
+      "60000/60000 [==============================] - 34s 560us/sample - loss: 0.0355 - acc: 0.9918\n",
+      "Epoch 13/20\n",
+      "60000/60000 [==============================] - 34s 559us/sample - loss: 0.0297 - acc: 0.9926\n",
+      "Epoch 14/20\n",
+      "60000/60000 [==============================] - 33s 558us/sample - loss: 0.0295 - acc: 0.9935\n",
+      "Epoch 15/20\n",
+      "60000/60000 [==============================] - 33s 558us/sample - loss: 0.0320 - acc: 0.9936\n",
+      "Epoch 16/20\n",
+      "60000/60000 [==============================] - 34s 560us/sample - loss: 0.0296 - acc: 0.9939\n",
+      "Epoch 17/20\n",
+      "60000/60000 [==============================] - 34s 560us/sample - loss: 0.0248 - acc: 0.9943\n",
+      "Epoch 18/20\n",
+      "60000/60000 [==============================] - 33s 557us/sample - loss: 0.0279 - acc: 0.9943\n",
+      "Epoch 19/20\n",
+      "60000/60000 [==============================] - 33s 557us/sample - loss: 0.0252 - acc: 0.9949\n",
+      "Epoch 20/20\n",
+      "60000/60000 [==============================] - 33s 558us/sample - loss: 0.0273 - acc: 0.9949\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7f57981115f8>"
+       "<tensorflow.python.keras.callbacks.History at 0x7f2b916a0c50>"
       ]
      },
      "metadata": {},
-     "execution_count": 21
+     "execution_count": 4
     }
    ],
    "source": [
@@ -132,25 +170,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "10000/10000 [==============================] - 0s 46us/sample - loss: 0.0728 - acc: 0.9787\n"
+      "10000/10000 [==============================] - 1s 129us/sample - loss: 0.1905 - acc: 0.9836\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[0.07279575093571912, 0.9787]"
+       "[0.1904973572172238, 0.9836]"
       ]
      },
      "metadata": {},
-     "execution_count": 19
+     "execution_count": 5
     }
    ],
    "source": [
@@ -159,14 +197,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Model: \"sequential_2\"\n_________________________________________________________________\nLayer (type)                 Output Shape              Param #   \n=================================================================\nflatten_3 (Flatten)          multiple                  0         \n_________________________________________________________________\ndense_4 (Dense)              multiple                  401920    \n_________________________________________________________________\ndropout_2 (Dropout)          multiple                  0         \n_________________________________________________________________\ndense_5 (Dense)              multiple                  5130      \n=================================================================\nTotal params: 407,050\nTrainable params: 407,050\nNon-trainable params: 0\n_________________________________________________________________\n"
+      "Model: \"sequential\"\n_________________________________________________________________\nLayer (type)                 Output Shape              Param #   \n=================================================================\nflatten (Flatten)            multiple                  0         \n_________________________________________________________________\ndense (Dense)                multiple                  6430720   \n_________________________________________________________________\ndropout (Dropout)            multiple                  0         \n_________________________________________________________________\ndense_1 (Dense)              multiple                  81930     \n=================================================================\nTotal params: 6,512,650\nTrainable params: 6,512,650\nNon-trainable params: 0\n_________________________________________________________________\n"
      ]
     }
    ],
