--- a/Dia 4/training.ipynb
+++ b/Dia 4/training.ipynb
@@ -93,7 +93,7 @@
    "source": [
     "model = tf.keras.models.Sequential([\n",
     "    tf.keras.layers.Flatten(),\n",
-    "    tf.keras.layers.Dense(8192, activation=tf.nn.relu),\n",
+    "    tf.keras.layers.Dense(512, activation=tf.nn.relu),\n",
     "    tf.keras.layers.Dropout(0.2),\n",
     "    tf.keras.layers.Dense(10, activation=tf.nn.softmax)\n",
     "])\n",
@@ -104,91 +104,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
+      "Train on 60000 samples, validate on 10000 samples\n",
       "Epoch 1/20\n",
-      "60000/60000 [==============================] - 33s 554us/sample - loss: 0.1945 - acc: 0.9413\n",
+      "60000/60000 [==============================] - 5s 80us/sample - loss: 0.0363 - acc: 0.9876 - val_loss: 0.0653 - val_acc: 0.9813\n",
       "Epoch 2/20\n",
-      "60000/60000 [==============================] - 33s 551us/sample - loss: 0.0958 - acc: 0.9719\n",
+      "60000/60000 [==============================] - 5s 80us/sample - loss: 0.0298 - acc: 0.9901 - val_loss: 0.0643 - val_acc: 0.9826\n",
       "Epoch 3/20\n",
-      "60000/60000 [==============================] - 33s 551us/sample - loss: 0.0695 - acc: 0.9797\n",
+      "60000/60000 [==============================] - 5s 83us/sample - loss: 0.0260 - acc: 0.9910 - val_loss: 0.0732 - val_acc: 0.9802\n",
       "Epoch 4/20\n",
-      "60000/60000 [==============================] - 33s 552us/sample - loss: 0.0577 - acc: 0.9828\n",
+      "60000/60000 [==============================] - 5s 81us/sample - loss: 0.0247 - acc: 0.9916 - val_loss: 0.0727 - val_acc: 0.9821\n",
       "Epoch 5/20\n",
-      "60000/60000 [==============================] - 33s 555us/sample - loss: 0.0504 - acc: 0.9858\n",
+      "60000/60000 [==============================] - 5s 81us/sample - loss: 0.0232 - acc: 0.9920 - val_loss: 0.0793 - val_acc: 0.9796\n",
       "Epoch 6/20\n",
-      "60000/60000 [==============================] - 33s 554us/sample - loss: 0.0449 - acc: 0.9868\n",
+      "60000/60000 [==============================] - 5s 81us/sample - loss: 0.0202 - acc: 0.9930 - val_loss: 0.0793 - val_acc: 0.9809\n",
       "Epoch 7/20\n",
-      "60000/60000 [==============================] - 33s 554us/sample - loss: 0.0408 - acc: 0.9883\n",
+      "60000/60000 [==============================] - 5s 81us/sample - loss: 0.0202 - acc: 0.9931 - val_loss: 0.0726 - val_acc: 0.9830\n",
       "Epoch 8/20\n",
-      "60000/60000 [==============================] - 33s 554us/sample - loss: 0.0421 - acc: 0.9889\n",
+      "60000/60000 [==============================] - 5s 82us/sample - loss: 0.0181 - acc: 0.9942 - val_loss: 0.0786 - val_acc: 0.9828\n",
       "Epoch 9/20\n",
-      "60000/60000 [==============================] - 33s 557us/sample - loss: 0.0359 - acc: 0.9906\n",
+      "60000/60000 [==============================] - 5s 81us/sample - loss: 0.0169 - acc: 0.9943 - val_loss: 0.0723 - val_acc: 0.9836\n",
       "Epoch 10/20\n",
-      "60000/60000 [==============================] - 33s 557us/sample - loss: 0.0375 - acc: 0.9905\n",
+      "60000/60000 [==============================] - 5s 81us/sample - loss: 0.0157 - acc: 0.9947 - val_loss: 0.0810 - val_acc: 0.9840\n",
       "Epoch 11/20\n",
-      "60000/60000 [==============================] - 33s 558us/sample - loss: 0.0266 - acc: 0.9935\n",
+      "60000/60000 [==============================] - 5s 82us/sample - loss: 0.0172 - acc: 0.9941 - val_loss: 0.0877 - val_acc: 0.9818\n",
       "Epoch 12/20\n",
-      "60000/60000 [==============================] - 34s 560us/sample - loss: 0.0355 - acc: 0.9918\n",
+      "60000/60000 [==============================] - 5s 82us/sample - loss: 0.0126 - acc: 0.9956 - val_loss: 0.0846 - val_acc: 0.9835\n",
       "Epoch 13/20\n",
-      "60000/60000 [==============================] - 34s 559us/sample - loss: 0.0297 - acc: 0.9926\n",
+      "60000/60000 [==============================] - 5s 81us/sample - loss: 0.0140 - acc: 0.9952 - val_loss: 0.0938 - val_acc: 0.9824\n",
       "Epoch 14/20\n",
-      "60000/60000 [==============================] - 33s 558us/sample - loss: 0.0295 - acc: 0.9935\n",
+      "60000/60000 [==============================] - 5s 84us/sample - loss: 0.0144 - acc: 0.9953 - val_loss: 0.1034 - val_acc: 0.9806\n",
       "Epoch 15/20\n",
-      "60000/60000 [==============================] - 33s 558us/sample - loss: 0.0320 - acc: 0.9936\n",
+      "60000/60000 [==============================] - 5s 83us/sample - loss: 0.0115 - acc: 0.9961 - val_loss: 0.0889 - val_acc: 0.9829\n",
       "Epoch 16/20\n",
-      "60000/60000 [==============================] - 34s 560us/sample - loss: 0.0296 - acc: 0.9939\n",
+      "60000/60000 [==============================] - 5s 81us/sample - loss: 0.0122 - acc: 0.9959 - val_loss: 0.0966 - val_acc: 0.9836\n",
       "Epoch 17/20\n",
-      "60000/60000 [==============================] - 34s 560us/sample - loss: 0.0248 - acc: 0.9943\n",
+      "60000/60000 [==============================] - 5s 82us/sample - loss: 0.0125 - acc: 0.9958 - val_loss: 0.1043 - val_acc: 0.9829\n",
       "Epoch 18/20\n",
-      "60000/60000 [==============================] - 33s 557us/sample - loss: 0.0279 - acc: 0.9943\n",
+      "60000/60000 [==============================] - 5s 82us/sample - loss: 0.0109 - acc: 0.9964 - val_loss: 0.0978 - val_acc: 0.9839\n",
       "Epoch 19/20\n",
-      "60000/60000 [==============================] - 33s 557us/sample - loss: 0.0252 - acc: 0.9949\n",
+      "60000/60000 [==============================] - 5s 83us/sample - loss: 0.0129 - acc: 0.9958 - val_loss: 0.0975 - val_acc: 0.9849\n",
       "Epoch 20/20\n",
-      "60000/60000 [==============================] - 33s 558us/sample - loss: 0.0273 - acc: 0.9949\n"
+      "60000/60000 [==============================] - 5s 82us/sample - loss: 0.0121 - acc: 0.9961 - val_loss: 0.1027 - val_acc: 0.9833\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7f2b916a0c50>"
+       "<tensorflow.python.keras.callbacks.History at 0x7f78aafac208>"
       ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 8
     }
    ],
    "source": [
-    "model.fit(x_train, y_train, epochs=20)"
+    "model.fit(x_train, y_train, epochs=20, validation_data=(x_test, y_test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "10000/10000 [==============================] - 1s 129us/sample - loss: 0.1905 - acc: 0.9836\n"
+      "10000/10000 [==============================] - 0s 33us/sample - loss: 0.1027 - acc: 0.9833\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[0.1904973572172238, 0.9836]"
+       "[0.10271930464947668, 0.9833]"
       ]
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 9
     }
    ],
    "source": [
@@ -197,14 +198,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Model: \"sequential\"\n_________________________________________________________________\nLayer (type)                 Output Shape              Param #   \n=================================================================\nflatten (Flatten)            multiple                  0         \n_________________________________________________________________\ndense (Dense)                multiple                  6430720   \n_________________________________________________________________\ndropout (Dropout)            multiple                  0         \n_________________________________________________________________\ndense_1 (Dense)              multiple                  81930     \n=================================================================\nTotal params: 6,512,650\nTrainable params: 6,512,650\nNon-trainable params: 0\n_________________________________________________________________\n"
+      "Model: \"sequential\"\n_________________________________________________________________\nLayer (type)                 Output Shape              Param #   \n=================================================================\nflatten (Flatten)            multiple                  0         \n_________________________________________________________________\ndense (Dense)                multiple                  401920    \n_________________________________________________________________\ndropout (Dropout)            multiple                  0         \n_________________________________________________________________\ndense_1 (Dense)              multiple                  5130      \n=================================================================\nTotal params: 407,050\nTrainable params: 407,050\nNon-trainable params: 0\n_________________________________________________________________\n"
      ]
     }
    ],
